# MAB

./: .gitignore  README.md  pyproject.toml  requirements.txt  比赛.txt
benchmark_toolkit/: __init__.py
benchmark_toolkit/adapters/: __init__.py  autogen_adapter.py  crewai_adapter.py  langgraph_adapter.py  multi_step_adapter.py  role_based_adapter.py  single_agent.py
benchmark_toolkit/cli/: main.py
benchmark_toolkit/core/: __init__.py  adapter.py  metrics.py  runner.py  task.py
benchmark_toolkit/dashboard/: app.py
benchmark_toolkit/tasks/: __init__.py  task_registry.py
experiments/: generate_mock_results.py  merge_results.py  run_crewai_style.py  run_deepseek_full.py  run_experiment.py  run_gpt_rolebased.py  run_multimodel.py  run_openai_proxy.py  run_real_crewai.py
experiments/configs/: default.yaml
experiments/results/: combined_final.json  crewai_real.json  deepseek_comparison.json  deepseek_single_agent.json  final_combined.json  mock_benchmark.json  multimodel_comparison.json  openai_proxy.json  role_based_flash.json
paper/: generate_figures.py  main.tex
tests/: test_core.py  test_tasks.py
zh_for_review/: README_CN.md  paper_CN.md  paper_CN_full.md
