[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multi-agent-benchmark"
version = "0.1.0"
description = "Multi-Agent Collaboration Benchmark Toolkit — compare frameworks across standard tasks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Junze Li"}
]

dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "streamlit>=1.28",
    "plotly>=5.18",
    "pandas>=2.0",
    "numpy>=1.24",
    "tiktoken>=0.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.30.0"]
autogen = ["pyautogen>=0.2.0"]
langgraph = ["langgraph>=0.0.30", "langchain>=0.2.0"]
all = ["multi-agent-benchmark[crewai,autogen,langgraph]"]

[project.scripts]
mab = "benchmark_toolkit.cli.main:cli"

[tool.setuptools.packages.find]
include = ["benchmark_toolkit*"]
